--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
-API_ID= 
-API_HASH= 
+API_ID=17471501
+API_HASH=03f29bc2bae31caab4baf366d42137ab
 BOT_TOKEN= 
 DURATION_LIMIT=999
 MONGO_DB_URI=mongodb+srv://userge:userge@userge.0dauj.mongodb.net/Userge?retryWrites=true&w=majority
