--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,7 @@ API_ID=17471501
 API_HASH=03f29bc2bae31caab4baf366d42137ab
 BOT_TOKEN=2107079102:AAFc7CDPFk3J6I5UvVWcZZAfEm8e8UmlasM 
 DURATION_LIMIT=2222
-MONGO_DB_URI=mongodb+srv://userge:userge@userge.0dauj.mongodb.net/Userge?retryWrites=true&w=majority
+MONGO_DB_URI=mongodb+srv://filterghounz21:ghoundz34@cluster0.ycmfi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 LOG_GROUP_ID= 
 MUSIC_BOT_NAME= 
 OWNER_ID=851754691
